package com.example.backend.application.dto;

public record ParkingSpot(
        String name,
        double lat,
        double lon
) {}
