package com.example.backend.application.dto;

public enum TransportMode {
    DRIVING,
    BICYCLE,
    WALK,
    BUS
}
