@startuml "DTOs — Partial Design Model"

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam shadowing false
skinparam defaultFontSize 10
skinparam classFontSize 11
skinparam nodesep 10
skinparam ranksep 20

title Application DTOs (Partial Design Model)

' === ROW 1 ===
package "Auth" #FFF8E1 {
    class LoginRequest {
        - email : String
        - password : String
    }

    class RegisterRequest {
        - fullName : String
        - email : String
        - password : String
        - role : String
    }

    class AuthResponse {
        - token : String
        - userId : Long
        - role : String
    }
}

package "User" #E8F5E9 {
    class UpdateProfileRequest {
        - fullName : String
        - licenseNumber : String
    }

    class UserProfileResponse {
        - id : Long
        - fullName : String
        - email : String
        - role : String
        - balance : Double
    }
}

package "Booking" #E3F2FD {
    class BookingRequest {
        - carId : Long
        - learnerId : Long
        - date : String
        - startTime : String
        - duration : int
        - pricingType : String
    }

    class BookingResponse {
        - id : Long
        - carId : Long
        - learnerId : Long
        - date : String
        - totalCost : double
        - status : String
    }

    class FinishBookingRequest {
        - pathData : String
        - estimatedTime : double
    }
}

' === ROW 2 ===
package "Car" #F3E5F5 {
    class CarRequest {
        - makeModel : String
        - transmissionType : String
        - latitude : double
        - longitude : double
        - hourlyRate : double
    }

    class CarDto {
        - id : Long
        - makeModel : String
        - transmissionType : String
        - isAvailable : boolean
        - hourlyRate : double
        - providerId : Long
    }
}

package "Availability" #FFF3E0 {
    class AvailabilitySlotDto {
        - dayOfWeek : String
        - startMinute : int
        - endMinute : int
        - available : boolean
    }

    class WeeklyAvailabilityRequest {
        - slots : List<AvailabilitySlotRequest>
    }

    class WeeklyAvailabilityResponse {
        - carId : Long
        - slots : List<AvailabilitySlotDto>
    }

    WeeklyAvailabilityRequest --> "*" AvailabilitySlotDto
    WeeklyAvailabilityResponse --> "*" AvailabilitySlotDto
}

package "Analytics / Route" #E0F7FA {
    class AnalyticsResponseDTO {
        - carUtilizations : List<CarUtilizationDTO>
    }

    class CarUtilizationDTO {
        - carId : Long
        - makeModel : String
        - totalBookings : int
    }

    enum TransportMode {
        DRIVING
        BICYCLE
        WALK
        BUS
    }

    class RouteResult <<Record>> {
        - geometry : String
        - distance : double
        - duration : double
    }

    class ParkingSpot <<Record>> {
        - name : String
        - lat : double
        - lon : double
    }

    AnalyticsResponseDTO --> "*" CarUtilizationDTO
}

' Force 2-row layout
"Auth" -[hidden]down-> "Car"
"User" -[hidden]down-> "Availability"
"Booking" -[hidden]down-> "Analytics / Route"

@enduml
